--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch:sass": "node-sass scss/main.scss css/style.css --watch",
-    "compile:sass": "node-sass scss/main.scss css/style.css"
+    "watch:sass": "node-sass scss/pages/gallery/main.scss css/gallery.css --watch",
+    "compile:sass": "node-sass scss/pages/gallery/main.scss css/gallery.css"
   },
   "repository": {
     "type": "git",
@@ -22,8 +22,11 @@
     "node-sass": "^6.0.1"
   },
   "dependencies": {
+    "curtainsjs": "^8.1.3",
+    "draggabilly": "^2.3.0",
     "gsap": "^3.8.0",
     "imagesloaded": "^4.1.4",
-    "locomotive-scroll": "^4.1.3"
+    "locomotive-scroll": "^4.1.3",
+    "three": "^0.135.0"
   }
 }
