--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:sass": "node-sass scss/main.scss css/style.css --watch",
-    "compile:sass": "node-sass scss/main.scss css/style.css"
+    "compile:sass": "node-sass scss/main.scss css/style.css",
+    "build": "parcel index.html"
   },
   "repository": {
     "type": "git",
